# PWMS

./: .env  .env.example  .gitignore  Cargo.toml  DEV_SCRATCHPAD.md  LICENSE  Makefile  README.md  api_tests_v2.http  app.vue  dist  docker-compose.yml  nuxt.config.ts  package-lock.json  package.json  stress_v2.txt
backend/: .env  Cargo.toml  run_stress.sh  stress_actual_result.txt  stress_v2.txt
backend/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
backend/src/api/: api_key_middleware.rs  auth_middleware.rs  docs.rs  handlers.rs  mod.rs  router.rs  ws_handler.rs
backend/src/http/handlers/: approval_handler.rs  audit.rs  auth.rs  dispatch_handler.rs  inbound.rs  inventory.rs  mod.rs  outbound.rs  packing.rs  picking.rs  qc.rs  ws.rs
backend/src/http/handlers/v2/: inbound.rs  inventory.rs  mod.rs  outbound.rs
backend/src/http/middleware/: auth.rs  auth_layer.rs  mod.rs  role_guard.rs
backend/src/models/: dtos.rs  entities.rs  location.rs  mod.rs  outbound.rs  product.rs
backend/src/repositories/: core_repo.rs  location_repo.rs  mod.rs  outbound_repo.rs  outbox_repo.rs  product_repo.rs
backend/src/services/: approval_service.rs  auth.rs  auth_service.rs  dispatch_service.rs  inbound.rs  inbound_qc_service.rs  inventory.rs  iot_service.rs  mod.rs  order_service.rs  outbound_service.rs  packing_service.rs  picking_service.rs  qc.rs  recall_service.rs  runner_service.rs  sensor.rs
backend/src/workers/: expiry_worker.rs  mod.rs  outbox_consumer.rs
backend/tests/: api_auth_test.rs  chaos_warehouse_test.rs  e2e_lifecycle_test.rs  seed_data.rs  stress_bench.rs  test_outbound.py
database/: fix_passwords.sql  seed_full_workflow.sql  seed_inbound.sql  seed_outbound.sql  seed_users.sql  seed_v2_data.sql
database/migrations/: 001_create_roles.sql  001_v2_core_init.sql  002_create_audit_logs.sql  002_create_users.sql  003_create_master_data.sql  003_fix_missing_tables.sql  003_gsp_gdp_extensions.sql  004_create_inbound_qc.sql  004_hotfix_enums.sql  007_add_auth.sql  (+28 more)
docs/: memory.md  repaired.md
frontend/: .env  README.md  app.vue  nuxt.config.ts  package-lock.json  pubspec.yaml  run.bat
scratch/: concat_backend.py  concat_sql.py
shared/: package.json
shared/rust/: Cargo.toml
shared/rust/src/: database.rs  error.rs
src-tauri/: Cargo.toml  tauri.conf.json
(+235 files in other folders)
