[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
    "bigdecimal",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3"
shared = { path = "../shared/rust" }
bcrypt = "0.15"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.10"
thiserror = "2.0.18"
uuid = "1.23.1"
axum-extra = { version = "0.12.6", features = ["typed-header"] }
redis = { version = "0.27", features = ["tokio-rustls-comp", "json", "aio"] }
tower = { version = "0.5", features = ["util"] }
validator = { version = "0.19", features = ["derive"] }
rand = "0.8"
bigdecimal = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-tungstenite = "0.24"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
